# Drone-s-Landing-

./: .gitignore  AI_WORKSPACE_CONTEXT.md  ARCHITECTURE.md  Dockerfile  MESSAGES.md  NODES.md  README.md  TROUBLESHOOTING.md  ros_entrypoint.sh
models/aruco/: generate_aruco.py  generate_markers.py
models/aruco/DICT_4X4_50/marker_0/: model.config  model.sdf
models/aruco/DICT_4X4_50/marker_0/materials/scripts/: model.material
models/aruco/DICT_4X4_50/marker_7/: model.config  model.sdf
models/aruco/DICT_4X4_50/marker_7/materials/scripts/: model.material
models/iris/: model.sdf
models/platform/: model.config  model.sdf
models/platform/materials/scripts/: model.material
src/aruco_detect/: BUILD.md  CMakeLists.txt  DIAGRAMS.md  README.md  TECHNICAL.md  USAGE.md  package.xml
src/aruco_detect/config/: aruco_detect.yaml  fractal_config.yaml  marker_groups.yaml
src/aruco_detect/launch/: aruco_detect.launch  complete.launch  group_detection.launch
src/aruco_detect/scripts/: generate_fractal_marker.py  generate_plt.py
src/aruco_detect/src/: aruco_detect_node.cpp  generate_fractal.cpp  group_detection_node.cpp
src/aruco_detect/srv/: GenerateFractalMarker.srv
src/dynamic_ibvs/: CMakeLists.txt  package.xml
src/dynamic_ibvs/config/: platform_ibvs.rviz  platform_ibvs_params.yaml
src/dynamic_ibvs/include/dynamic_ibvs/: ibvs_controller.hpp  marker_detector.hpp
src/dynamic_ibvs/launch/: full_stack.launch  minimal.launch  platform_ibvs.launch
src/dynamic_ibvs/outputs/: vertices.txt
src/dynamic_ibvs/src/: ibvs_controller.cpp  marker_detector.cpp  platform_ibvs_node.cpp
src/platform_control/: CMakeLists.txt  package.xml
src/platform_control/include/platform_control/: moving_platform_plugin.hpp
src/platform_control/src/: moving_platform_plugin.cpp
src/platform_control/srv/: SetPlatformVelocity.srv
utils/: README.md  main.py  plotter.py
worlds/: empty.world  ibvs.world
