<?xml version="1.0"?>
<package format="2">
  <name>aruco_detect</name>
  <version>0.0.1</version>
  <description>Custom ArUco marker detection package that processes RGBD data and publishes fiducial information</description>

  <maintainer email="ingaletejas010@gmail.com">Developer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>cv_bridge</build_depend> -->

  <!-- ROS dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_generation</depend>


  <!-- Custom message dependencies -->

  <depend>fiducial_msgs</depend>
  <depend>ibvs_msgs</depend>

  <!-- OpenCV -->
  <depend>opencv3</depend>

  <!-- Armadillo -->
  <depend>armadillo</depend>
  
  <!-- YAML -->
  <depend>yaml-cpp</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>


  <export>
  </export>
</package>
